--- a/app/src/main/res/layout/item_demo_01.xml
+++ b/app/src/main/res/layout/item_demo_01.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container_list_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/statelist_item_background">
 
     <include layout="@layout/common_item_layout" />
 </RelativeLayout>
